@@ -265,14 +265,21 @@ is (next_free_port, 5433, 'next_free_port detects localhost ipv4 socket');
 push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -4 -q0 -l 5433));
 usleep 50_000;
 is (next_free_port, 5434, 'next_free_port detects wildcard ipv4 socket');
-# open a localhost ipv6 socket
-push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l ::1 5434));
-usleep 50_000;
-is (next_free_port, 5435, 'next_free_port detects localhost ipv6 socket');
-# open a wildcard ipv6 socket
-push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l 5435));
-usleep 50_000;
-is (next_free_port, 5436, 'next_free_port detects wildcard ipv6 socket');
+
+SKIP: {
+    $^V =~ /^v(\d+\.\d+)/; # parse perl version
+    skip "perl <= 5.10 does not have proper IPv6 support", 2 if ($1 <= 5.10);
+
+    # open a localhost ipv6 socket
+    push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l ::1 5434));
+    usleep 50_000;
+    is (next_free_port, 5435, 'next_free_port detects localhost ipv6 socket');
+    # open a wildcard ipv6 socket
+    push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l 5435));
+    usleep 50_000;
+    is (next_free_port, 5436, 'next_free_port detects wildcard ipv6 socket');
+}
+
 # clean up
 kill 15, @pids;
 
